--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <script>
-        window.open("http://http://68.132.239.59/build-sessions","_self")
+        window.open("http://68.132.239.59/build-sessions","_self")
     </script>
 </html>
